storage engines without directoryperdb support should fail to start up with --directoryperdb

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 3.0.0-rc6
    • Affects Version/s: 2.8.0-rc5
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When starting up a server with a storage engine that does not provide --directoryperdb support (eg. rocksExperiment, devnull, ...), the storage engine silently ignores --directoryperdb and does not adopt a different layout for the data directory.

      To reproduce, build mongod with --rocks and run the follow JS Test:

      buildscripts/smoke.py --storageEngine=devnull jstests/noPassthrough/directoryperdb.js
      

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: