SERVER-16906 storage engines without directoryperdb support should fail to start up with --directoryperdb